Move circle file into it's own directory.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Isolations</h1>
   <ul>
-    <li><a href="svg-semicircle-percentage.html">SVG Semicircle Percentage</li>
+    <li><a href="svg-semicircle-percentage">SVG Semicircle Percentage</li>
   </ul>
 </body>
 </html>
