--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Isolations</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Isolations</h1>
